feat(config): make quest world configurable via quests.default_world
Add quests.default_world config key (default: event). Seeder reads from
config instead of hardcoding. Add /quest reload reseed command to force
re-seed definitions after config changes.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>